--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
     <div class="col-sm-6"><h4><b>HACKSPLAINING</b></h4>
       <p>Learn about all of the major vulnerabilities that threaten your system.</p>
       <a href="https://www.hacksplaining.com/features">Click Here</a></div>
-      <div class="col-sm-6"><img src="pics/hacksplaining.jpg" alt="hacksplaining" id="hacksplaining"></div>
+      <div class="col-sm-6"><img src="Pics/hacksplaining.jpg" alt="hacksplaining" id="hacksplaining"></div>
     </div>
     <br><br><br>
     <div class="row">
-      <div class="col-sm-6"><img src="pics/cybrary.png" alt="cybrary" id="cybrary"></div>
+      <div class="col-sm-6"><img src="Pics/cybrary.png" alt="cybrary" id="cybrary"></div>
       <div class="col-sm-6"><h4><b>CYBRARY</b></h4>
       <p>Accelerate in your role, earn new certifications, and develop cutting-edge skills using the fastest growing catalog in the industry.</p>
       <a href="https://www.cybrary.it/">Click Here</a></div>
