--- a/bugbounty.html
+++ b/bugbounty.html
@@ -48,11 +48,11 @@
       <div class="col-sm-6"><h4><b>HACKERONE</b></h4>
       <p>More Fortune 500 and Forbes Global 1,000 companies trust HackerOne to test and secure the applications they depend on to run their business.</p>
       <a href="https://hackerone.com/bug-bounty-programs">Click Here</a></div>
-      <div class="col-sm-6"><img src="pics/hackerone.jpg" alt="hackerone" id="hackerone"></div>
+      <div class="col-sm-6"><img src="Pics/hackerone.jpg" alt="hackerone" id="hackerone"></div>
       </div>
       <br><br><br>
       <div class="row">
-        <div class="col-sm-6"><img src="pics/bugbounty.jpg" alt="bugbounty" id="bugbounty"></div>
+        <div class="col-sm-6"><img src="Pics/bugbounty.jpg" alt="bugbounty" id="bugbounty"></div>
       <div class="col-sm-6"><h4><b>BUGCROWD</b></h4>
       <p>A comprehensive, up to date list of bug bounty and disclosure programs from across the web curated by the hacker community.</p>
       <a href="https://bugcrowd.com/programs">Click Here</a></div>
