--- a/tools.html
+++ b/tools.html
@@ -48,11 +48,11 @@
     <div class="col-sm-6"><h4><b>Z-SHADOW</b></h4>
       <p>Using Z shadow you can secretly hack your friends or someone Facebook, Instagram, Gmail, Tinder, and other accounts ID and password without letting them know. Anyone can use this method there is no technical skill required for this. You have to send a link to that person whose Facebook or any other account you want to hack.</p>
       <a href="http://z-shadow.info/">Click Here</a></div>
-      <div class="col-sm-6"><img src="pics/shadow.jpg" alt="hacksplaining" id="hacksplaining"></div>
+      <div class="col-sm-6"><img src="Pics/shadow.jpg" alt="hacksplaining" id="hacksplaining"></div>
     </div>
     <br><br><br>
     <div class="row">
-      <div class="col-sm-6"><img src="pics/brup.png" alt="cybrary" id="cybrary"></div>
+      <div class="col-sm-6"><img src="Pics/brup.png" alt="cybrary" id="cybrary"></div>
       <div class="col-sm-6"><h4><b>BRUP SUITE</b></h4>
       <p>Burp Suite is an integrated platform for performing security testing of web applications. Its various tools work seamlessly together to support the entire testing process, from initial mapping and analysis of an application's attack surface, through to finding and exploiting security vulnerabilities.</p>
       <a href="https://portswigger.net/burp">Click Here</a></div>
