--- a/bugbounty.html
+++ b/bugbounty.html
@@ -48,7 +48,7 @@
       <div class="col-sm-6"><h4><b>HACKERONE</b></h4>
       <p>More Fortune 500 and Forbes Global 1,000 companies trust HackerOne to test and secure the applications they depend on to run their business.</p>
       <a href="https://hackerone.com/bug-bounty-programs">Click Here</a></div>
-      <div class="col-sm-6"><img src="Pics/hackerone.jpg" alt="hackerone" id="hackerone"></div>
+      <div class="col-sm-6"><img src="Pics/hackerone.png" alt="hackerone" id="hackerone"></div>
       </div>
       <br><br><br>
       <div class="row">
